# csv-utils

./: .gitignore  AGENTS.md  Cargo.toml  README.md  book.toml  build.zig  build.zig.zon  conda-forge-pr-review-notes.md  csv-utils.json  pixi.toml
.cursor/plans/: migrate-tui-to-libvaxis_6ea37b82.plan.md
.cursor/rules/: keep-docs-in-sync.mdc
.github/workflows/: pages.yml
csv-utils/: Cargo.toml
csv-utils-core/: Cargo.toml
csv-utils-core/examples/: bench_stats_drop.rs
csv-utils-core/src/: actions.rs  client_view.rs  column.rs  column_layout.rs  column_stats.rs  column_value_filter.rs  display.rs  engine.rs  fuzzy.rs  json_view.rs  lib.rs  model.rs  predicate.rs  preview.rs  schema.rs  settings.rs  sort.rs  stats.rs  unique.rs
csv-utils-web/: Cargo.toml
csv-utils-web/src/: index.html  main.rs  server.rs
csv-utils/src/: cli.rs  main.rs
csv-utils/src/tui/: app.rs  column_finder.rs  command_line.rs  file_picker.rs  mod.rs  scroll.rs
csv-utils/src/web/: index.html  mod.rs  server.rs
docs/: DESIGN.md  README.md  SUMMARY.md  architecture.md  getting-started.md  implementation-plan.md  index.md  principles.md  test-data-generation.md
docs/design/: large-file-preview.md  performance-tui-responsiveness.md  row-filtering.md  settings-config.md
docs/development/: build.md
docs/features/: cli.md  tui.md  web.md
docs/reference/: csv-parsing.md  data-loading.md  limitations.md
docs/user-experience/: overview.md
recipe/: recipe.yaml
scripts/: capture_tui_snapshot.py  generate_test_data.py  update-version.sh
src/: bench_csv_parse_main.zig  debug_preview_dump.zig  main.zig
src/cache/: index_store.zig
src/cli/: args.zig  commands.zig
src/core/: csv_reader.zig  engine.zig  json_view.zig  predicate.zig  preview.zig  schema.zig  stats.zig  unique.zig
src/tui/: app.zig  app_vaxis.zig
