[package]
name = "csv-utils-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CSV parsing, preview loading, CLI engine, and shared view model for csv-utils"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
