[package]
name = "csv-utils-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CSV parsing, preview loading, CLI engine, and shared view model for csv-utils"

[dependencies]
csv = "1.3"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
