[package]
name = "csv-utils-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Browser UI server for csv-utils"

[[bin]]
name = "csv-utils-web"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4", features = ["derive"] }
csv-utils-core = { path = "../csv-utils-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
