[package]
name = "csv-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance CSV CLI + ratatui TUI explorer"

[[bin]]
name = "csv-utils"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
csv-utils-core = { path = "../csv-utils-core" }
ratatui = "0.29"
