[package]
name = "csv-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance CSV CLI + ratatui TUI explorer"

[[bin]]
name = "csv"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
csv-utils-core = { path = "../csv-utils-core" }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
